--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <nav id="navScroll" class="navbar navbar-expand-lg navbar-light fixed-top" tabindex="0" >
       <div class="container-fluid">
         <a class="navbar-brand pe-4 fs-4" href="index.html">
-          <img src="img/logo-descubremerida-light.png"  height="32" class="d-inline-block align-text-top me-2" alt="Descubre merida Logo">
+          <img src="img/logo-descubremerida-light.png"  height="32" class="d-inline-block align-text-top me-2" alt="Descubre Mérida Logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
