--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <nav id="navScroll" class="navbar navbar-expand-lg navbar-light fixed-top" tabindex="0" >
       <div class="container-fluid">
         <a class="navbar-brand pe-4 fs-4" href="index.html">
-          <img src="img/logo-descubremerida-light.png"  height="32" class="d-inline-block align-text-top me-2" alt="Descubre Mérida Logo">
+          <img src="img/logo-descubremerida-light.png"  height="32" class="d-inline-block align-text-top me-2" alt="Stride Logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -75,11 +75,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#info">Info</a>
             </li>
+            
             <li class="nav-item">
-              <a class="nav-link" href="#contacto">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a href="#suscribete" class="btn btn-dark btn-xs shadow me-3 rounded-0 w-bold" style="margin:  0 10px;">Suscríbete</a>
+              <a href="#newsletter" class="btn btn-dark btn-xs shadow me-3 rounded-0 w-bold" style="margin:  0 10px;">Suscríbete</a>
             </li>
           </ul>
         </div>
@@ -92,7 +90,7 @@
           <div style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);z-index:1;"></div>
           <!-- Video -->
           <video class="position-absolute top-0 start-0 object-fit-cover" autoplay muted loop playsinline style="width:100%; height:100%; object-fit:cover; z-index:0;">
-            <source src="img/merida_ciudades_patrimonio 2.mp4" type="video/mp4">
+            <source src="img/merida_ciudades_patrimonio.mp4" type="video/mp4">
           </video>
           <!-- Contenido hero -->
           <div class="row" style="padding-left:10%; position:relative; z-index:2;">
@@ -681,7 +679,7 @@
 
 
 
-<div class="container py-vh-3 border-top" data-aos="fade" data-aos-delay="200">
+<div class="container py-vh-3 border-top" data-aos="fade" data-aos-delay="200" id="newsletter">
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-8 text-center">
       <h3 class="fs-2 fw-light mb-4">
