--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="row" style="padding-left:10%; position:relative; z-index:2;">
             <div class="col-lg-7 py-vh-6" data-aos="fade-right">
               <h1 class="display-1 fw-bold mt-5 p-4" style="color:white !important;">Descubre Mérida: <br>Patrimonio Cultural y Arqueológico</h1>
-              <p class="lead" style="color:white !important; padding: 10px;">Viaja en el tiempo entre ruinas romanas y tesoros históricos en una ciudad </p>
+              <p class="lead" style="color:white !important; margin-left: 10px;">Viaja en el tiempo entre ruinas romanas y tesoros históricos en una ciudad.</p>
               <a href="#video" class="btn btn-dark btn-xl shadow me-3 rounded-0 my-5" style="margin-left: 20px;">Un viaje extraordinario</a>
             </div>
           </div>
